<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:id="@+id/card_order_info"
    android:visibility="gone"
    app:cardCornerRadius="8dp"
    android:layout_marginTop="50dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:orientation="vertical"
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content">

            <TextView
                android:text="Your Order Information"
                android:layout_marginLeft="8dp"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="#000"
                android:fontFamily="serif"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:text="@string/service_bullet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/txt_service_name_order"
                android:text=" "
                android:textColor="#000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:text="@string/serviceType_bullet"
                android:layout_width="wrap_content"
                android:textColor="#000"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/txt_Category_name_order"
                android:text=""
                android:textColor="#000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/Grocery_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:visibility="gone">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/GroceryStore_bullet"
                android:textColor="#000"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/txt_user_GroceryStore_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textColor="#000"
                />
        </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/GroceryList_bullet"
                android:textColor="#000"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/txt_user_GroceryList_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textColor="#000"
                />
        </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/Other_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:visibility="gone">
          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/OtherType_bullet"
                android:textColor="#000"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/txt_user_OtherType_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textColor="#000"
                />
          </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/OtherInfo_bullet"
                android:textColor="#000"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/txt_user_OtherInfo_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textColor="#000"
                />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/Cannabis_layout"
            android:orientation="vertical"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/CannabisType_bullet"
                android:textColor="#000"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/txt_user_CannabisType_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textColor="#000"
                />
      </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">
            <TextView
                android:text="@string/CannabisPrice_bullet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:layout_gravity="center_vertical"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/txt_user_CannabisPrice_order"
                android:layout_width="wrap_content"
                android:textColor="#000"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:text="@string/time_bullet"
                android:layout_width="wrap_content"
                android:textColor="#000"
                android:layout_height="wrap_content"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/txt_time_ago_order"
                android:text=" "
                android:textColor="#000"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="10dp">



        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>